--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,7 @@
 @media (min-width: 992px) {}
 
 /* Extra large devices (large desktops, 1200px and up)*/
-@media (min-width: 1200px) {
-  /*#carou-container {
-    padding: 75px;
-    width: 100%;
-    height: auto;
-  }*/
-}
+@media (min-width: 1200px) {}
 
 body {
   height:auto;
@@ -41,11 +35,10 @@ body {
 }
 
 #logo {
-  margin-left: 15px;
-  margin-top: 15px;
+  margin: 10px 10px 10px 10px;
   font-family: 'Cinzel', serif;
   font-size: 2em;
-  font-weight: normal;
+  font-weight: 400;
 }
 
 #etsy-id, #insta-id, #facebook-id {
@@ -75,17 +68,27 @@ body {
   background: orange;
 }
 
+#about-contents {
+  width: 100%;
+  margin-top: 25px;
+  background-color: white;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: .01em;
+  text-align: center;
+}
+
+#interior-text {
+  padding: 35px;
+  text-align: center;
+}
+
 #header-text {
+  padding: 10px;
+  text-decoration: underline;
   text-align: center;
   text-transform: uppercase;
   font-family: 'Cinzel', serif;
   font-weight: bold;
+  
 }
 
-#about-contents {
-  background-color: white;
-  padding: 25px;
-  width: 100%;
-  font-family: 'Roboto', sans-serif;
-  letter-spacing: .01em;
-}
