--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body {
 
 #about-contents {
   width: 100%;
-  
+  margin-bottom: 25px;
   background-color: white;
   font-family: 'Roboto', sans-serif;
   letter-spacing: .01em;
