--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
 body {
   height:auto;
   width: auto;
-  background-color: rgba(135, 206, 235);
+  background-color: white;
 }
 
 #navigation {
@@ -77,6 +77,7 @@ body {
   letter-spacing: .01em;
   text-align: center;
   height: 200px;
+  margin-bottom: 10px;
 }
 
 #about-contents2 {
@@ -86,10 +87,11 @@ body {
   text-align: center;
   color: black;
   height: 200px;
+  margin-bottom: 10px;
 }
 
 #interior-text {
-  padding: 25px;
+  padding: 10px;
   text-align: center;
   font-size: 1rem;
 }
@@ -102,4 +104,5 @@ body {
   font-family: 'Cinzel', serif;
   font-weight: bold;
 }
+
 
