--- a/styles.css
+++ b/styles.css
@@ -88,11 +88,11 @@ body {
   
 }
 
-#interior-text {
+/*#interior-text {
   padding: 15px;
   text-align: center;
   font-size: 1rem;
-}
+}*/
 
 #header-text {
   color: black;
