--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
   font-family: 'Cinzel', serif;
 }
 
+
 #logo {
   margin: 10px 10px 10px 10px;
   font-family: 'Cinzel', serif;
@@ -70,30 +71,34 @@ body {
 
 /* Everything below is underneath the carousel */
 
+
+
 #about-contents {
   padding: 5px;
+  text-align: center;
   background-color: white;
   font-family: 'Roboto', sans-serif;
-  letter-spacing: .01em;
-  text-align: center;
   
 }
 
 #about-contents2 {
   padding: 5px;
+  text-align: center;
   background-color: rgba(135, 206, 235);
   font-family: 'Roboto', sans-serif;
-  text-align: center;
-  color: black;
+  margin-right: 25px;
   
 }
 
-#interior-text {
+#about-contents22 {
   padding: 5px;
- 
+  text-align: center;
+  background-color: rgba(135, 206, 235);
+  font-family: 'Roboto', sans-serif;
+   
 }
 
-#header-text {
+/*#header-text {
   color: black;
   padding: 10px;
   text-align: center;
@@ -103,3 +108,17 @@ body {
 }
 
 
+
+
+/*Text for contents*/
+
+#header-text {
+  padding: 10px;
+  font-size: 32px;
+}
+
+#p-text {
+  padding: 5px;
+  font-size: 16px;
+  letter-spacing: .01em;
+}
