--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ body {
   font-size: 16px;
   letter-spacing: .01em;
   font-family: 'Raleway', sans-serif;
-  font-weight: bold;
+  font-weight: 400;
   line-height: 1.6;
 }
 
