--- a/styles.css
+++ b/styles.css
@@ -86,26 +86,22 @@ body {
 }
 
 #about-contents2 {
-  padding: 3px;
+  margin-top: 25px;
+  padding: 1px;
   text-align: center;
-  background-color: rgba(135, 206, 235);
-  font-family: 'Roboto', sans-serif;
-  border-right: 1px white;
-  
+  margin-bottom: 1px white;
 }
 
 #about-contents22 {
-  padding: 5px;
+  padding: 1px;
   text-align: center;
-  background-color:white;
-  font-family: 'Roboto', sans-serif;
-  
+  background-color: white;
 }
 
 #header-text {
   font-family: 'Cinzel', sans-serif;
   padding: 10px;
-  font-size: 36px;
+  font-size: 32px;
   font-weight: 500;
 }
 
@@ -113,8 +109,8 @@ body {
   content: '';
   display: block;
   margin: 0 auto;
-  width: 25%;
-  max-width: 25%;
+  width: 10%;
+  max-width: 10%;
   padding-top: 3px;
   border-bottom: 1px solid black;
 }
@@ -133,12 +129,15 @@ body {
 /*Button stylings below*/
 
 #white-btn {
-  font-family: 'Verdana', sans-serif;
+  letter-spacing: .01em;
   text-transform: uppercase;
-  font-weight: 600;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
   background: white;
   color: black;
-  font-size: 14px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-bottom: 50px;
 }
 
 #white-btn:hover {
